--- a/packages/lexical-vue/package.json
+++ b/packages/lexical-vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lexical-vue",
-  "version": "0.1.2",
+  "name": "@wingnpm/lexical-vue",
+  "version": "0.1.3",
   "description": "An extensible Vue 3 web text-editor based on Lexical.",
   "publishConfig": {
     "directory": "package"
@@ -11,15 +11,15 @@
     "editor",
     "rich-text"
   ],
-  "homepage": "https://github.com/wobsoriano/lexical-vue#readme",
+  "homepage": "https://github.com/aquarius-wing/lexical-vue#readme",
   "bugs": {
-    "url": "https://github.com/wobsoriano/lexical-vue/issues"
+    "url": "https://github.com/aquarius-wing/lexical-vue/issues"
   },
   "license": "MIT",
   "author": "Robert Soriano <sorianorobertc@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wobsoriano/lexical-vue.git"
+    "url": "git+https://github.com/aquarius-wing/lexical-vue.git"
   },
   "main": "./dist/lexical-vue.cjs.js",
   "module": "./dist/lexical-vue.es.js",
@@ -38,7 +38,6 @@
     "dev": "vite build --watch",
     "build": "rimraf dist && vue-tsc && vite build",
     "release": "bumpp --commit --push --tag && pnpm publish",
-    "prepublishOnly": "rimraf ./package && pnpm run build && clean-publish",
     "postpublish": "rimraf ./package",
     "typecheck": "tsc"
   },
@@ -75,9 +74,5 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
-  },
-  "clean-publish": {
-    "withoutPublish": true,
-    "tempDir": "package"
   }
 }
