fix content editable error

--- a/packages/lexical-vue/package.json
+++ b/packages/lexical-vue/package.json
@@ -38,7 +38,7 @@
     "dev": "vite build --watch",
     "build": "rimraf dist && vue-tsc && vite build",
     "release": "bumpp --commit --push --tag && pnpm publish",
-    "prepublishOnly": "rimraf ./package && pnpm run build && clean-publish",
+    "prepublishOnly": "rimraf ./package && pnpm run build",
     "postpublish": "rimraf ./package",
     "typecheck": "tsc"
   },
