fix:change @meogic/lexical to lexical

--- a/package.json
+++ b/package.json
@@ -45,30 +45,30 @@
     "docs:serve": "vitepress serve docs"
   },
   "peerDependencies": {
-    "@meogic/lexical": "^0.11.1-mod7",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?branch=meogic-main",
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@meogic/lexical-clipboard": "^0.11.1-mod7",
-    "@meogic/lexical-code": "^0.11.1-mod7",
-    "@meogic/lexical-dragon": "^0.11.1-mod7",
-    "@meogic/lexical-hashtag": "^0.11.1-mod7",
-    "@meogic/lexical-history": "^0.11.1-mod7",
-    "@meogic/lexical-link": "^0.11.1-mod7",
-    "@meogic/lexical-list": "^0.11.1-mod7",
-    "@meogic/lexical-mark": "^0.11.1-mod7",
-    "@meogic/lexical-markdown": "^0.11.1-mod7",
-    "@meogic/lexical-overflow": "^0.11.1-mod7",
-    "@meogic/lexical-plain-text": "^0.11.1-mod7",
-    "@meogic/lexical-rich-text": "^0.11.1-mod7",
-    "@meogic/lexical-selection": "^0.11.1-mod7",
-    "@meogic/lexical-table": "^0.11.1-mod7",
-    "@meogic/lexical-text": "^0.11.1-mod7",
-    "@meogic/lexical-utils": "^0.11.1-mod7"
+    "@lexical/clipboard": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-clipboard/npm?branch=meogic-main",
+    "@lexical/code": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-code/npm?branch=meogic-main",
+    "@lexical/dragon": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-dragon/npm?branch=meogic-main",
+    "@lexical/hashtag": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-hashtag/npm?branch=meogic-main",
+    "@lexical/history": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-history/npm?branch=meogic-main",
+    "@lexical/link": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-link/npm?branch=meogic-main",
+    "@lexical/list": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-list/npm?branch=meogic-main",
+    "@lexical/mark": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-mark/npm?branch=meogic-main",
+    "@lexical/markdown": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-markdown/npm?branch=meogic-main",
+    "@lexical/overflow": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-overflow/npm?branch=meogic-main",
+    "@lexical/plain-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-plain-text/npm?branch=meogic-main",
+    "@lexical/rich-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-rich-text/npm?branch=meogic-main",
+    "@lexical/selection": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-selection/npm?branch=meogic-main",
+    "@lexical/table": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-table/npm?branch=meogic-main",
+    "@lexical/text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-text/npm?branch=meogic-main",
+    "@lexical/utils": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-utils/npm?branch=meogic-main"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
-    "@meogic/lexical": "^0.11.1-mod7",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?branch=meogic-main",
     "@types/node": "^20.3.0",
     "bumpp": "^9.1.1",
     "eslint": "^8.42.0",
