--- a/playground/package.json
+++ b/playground/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@meogic/lexical": "0.11.1-mod7",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?branch=meogic-main",
     "@meogic/lexical-vue": "workspace:*",
     "vue": "^3.3.4"
   },
