--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@meogic/lexical-vue",
+  "name": "lexical-vue",
   "type": "module",
   "version": "0.11.1-mod7",
   "description": "An extensible Vue 3 web text-editor based on Lexical.",
