add:branch to commit

--- a/package.json
+++ b/package.json
@@ -45,30 +45,30 @@
     "docs:serve": "vitepress serve docs"
   },
   "peerDependencies": {
-    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?branch=meogic-main",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@lexical/clipboard": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-clipboard/npm?branch=meogic-main",
-    "@lexical/code": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-code/npm?branch=meogic-main",
-    "@lexical/dragon": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-dragon/npm?branch=meogic-main",
-    "@lexical/hashtag": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-hashtag/npm?branch=meogic-main",
-    "@lexical/history": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-history/npm?branch=meogic-main",
-    "@lexical/link": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-link/npm?branch=meogic-main",
-    "@lexical/list": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-list/npm?branch=meogic-main",
-    "@lexical/mark": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-mark/npm?branch=meogic-main",
-    "@lexical/markdown": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-markdown/npm?branch=meogic-main",
-    "@lexical/overflow": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-overflow/npm?branch=meogic-main",
-    "@lexical/plain-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-plain-text/npm?branch=meogic-main",
-    "@lexical/rich-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-rich-text/npm?branch=meogic-main",
-    "@lexical/selection": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-selection/npm?branch=meogic-main",
-    "@lexical/table": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-table/npm?branch=meogic-main",
-    "@lexical/text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-text/npm?branch=meogic-main",
-    "@lexical/utils": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-utils/npm?branch=meogic-main"
+    "@lexical/clipboard": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-clipboard/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/code": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-code/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/dragon": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-dragon/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/hashtag": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-hashtag/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/history": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-history/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/link": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-link/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/list": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-list/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/mark": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-mark/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/markdown": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-markdown/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/overflow": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-overflow/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/plain-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-plain-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/rich-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-rich-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/selection": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-selection/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/table": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-table/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/utils": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-utils/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
-    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?branch=meogic-main",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
     "@types/node": "^20.3.0",
     "bumpp": "^9.1.1",
     "eslint": "^8.42.0",
