--- a/package.json
+++ b/package.json
@@ -55,37 +55,36 @@
     "docs:serve": "vitepress serve docs"
   },
   "peerDependencies": {
-    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=d5e7b25",
     "vue": "^3.2.0"
   },
   "dependencies": {
-    "@lexical/clipboard": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-clipboard/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/code": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-code/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/dragon": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-dragon/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/hashtag": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-hashtag/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/history": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-history/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/html": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-html/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/link": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-link/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/list": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-list/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/mark": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-mark/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/markdown": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-markdown/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/overflow": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-overflow/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/plain-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-plain-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/rich-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-rich-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/selection": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-selection/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/table": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-table/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-text/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
-    "@lexical/utils": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-utils/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "@lexical/clipboard": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-clipboard/npm?commit=d5e7b25",
+    "@lexical/code": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-code/npm?commit=d5e7b25",
+    "@lexical/dragon": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-dragon/npm?commit=d5e7b25",
+    "@lexical/hashtag": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-hashtag/npm?commit=d5e7b25",
+    "@lexical/history": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-history/npm?commit=d5e7b25",
+    "@lexical/html": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-html/npm?commit=d5e7b25",
+    "@lexical/link": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-link/npm?commit=d5e7b25",
+    "@lexical/list": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-list/npm?commit=d5e7b25",
+    "@lexical/mark": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-mark/npm?commit=d5e7b25",
+    "@lexical/markdown": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-markdown/npm?commit=d5e7b25",
+    "@lexical/overflow": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-overflow/npm?commit=d5e7b25",
+    "@lexical/plain-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-plain-text/npm?commit=d5e7b25",
+    "@lexical/rich-text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-rich-text/npm?commit=d5e7b25",
+    "@lexical/selection": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-selection/npm?commit=d5e7b25",
+    "@lexical/table": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-table/npm?commit=d5e7b25",
+    "@lexical/text": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-text/npm?commit=d5e7b25",
+    "@lexical/utils": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical-utils/npm?commit=d5e7b25",
     "@lexical/yjs": "0.14.5",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.14.0",
-    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=30d10f393d01cadc91b0e12653d9f37c32d8344e",
+    "lexical": "https://gh2npm-vercel.meogic.com/api/meogic-tech/lexical-for-meogic/packages/lexical/npm?commit=d5e7b25",
     "@types/node": "^20.12.7",
     "bumpp": "^9.4.0",
     "eslint": "^9.0.0",
-    "lexical": "0.14.5",
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
     "unplugin-vue": "^5.0.5",
